debugging font size.

--- a/index-style.css
+++ b/index-style.css
@@ -12,7 +12,7 @@ h1 {
     bottom: -300px;
     color: #333366;
     font-weight: 400; 
-    font-size: 100px;
+    font-size: 100%;
     margin-left: 67%;
     color: white;
     vertical-align: -500%;
