--- a/index-style.css
+++ b/index-style.css
@@ -7,16 +7,6 @@ body {
     background-color: #1f405f;
 }
 
-h1 {
-    position: relative; 
-    bottom: -300px;
-    color: #333366;
-    font-weight: 400; 
-    font-size: 100%;
-    margin-left: 67%;
-    color: white;
-    vertical-align: -500%;
-}
 
 img {
     width: 50%;
@@ -24,39 +14,39 @@ img {
 
 }
 
+h1 {
+    position: absolute; 
+    color: #333366;
+    font-weight: 400; 
+    font-size: 200%;
+    margin-left: 67%;
+    color: white;
+    vertical-align: -600%;
+    top: 10%;
+}
+
 a:link, a:hover, a:visited, a:active {
-    
-    font-size: 50px;
+     
+    font-size: 100%;
     margin-left: 11%;
     font-weight: 500;
-    position: relative;
     color: white;
-    bottom: 250px;
     text-decoration: none;
     background-color: grey;
     padding: 1%;
 }
 
 a:hover {
-
     color: #1f405f;
 }
-/*
 
 #resume_link {
-    position: relative;
-    left: 30px;
-    font-weight: 700;
-    background-color: blue;   
-    margin-left: 5%;
-    color: gray; 
-    padding: 2%;
+    position: absolute;
+    left: 54%;
+    top: 40%
 }
 #bio_link {
-    margin-left: 5%;
-    font-weight: 700;
-    color: gray; 
-    padding: 2%;
-
+    position: absolute;
+    left: 70%;
+    top: 40%;
 }
-*/
